[project]
name = "unitpy"
version = "0.1.0"
description = "A python library for unit conversions and unit-aware math, with a focus on simple syntax and ease of use."
readme = "README.md"
authors = [
    { name = "Jakob Spurgat" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
